--- a/src/assets/styles/huntease.styles.white.scss
+++ b/src/assets/styles/huntease.styles.white.scss
@@ -51,6 +51,7 @@ $backgrd: url("../img//back_app.svg");
   width: 44.1px;
   height: 39.3px;
   margin: 30px auto;
+  margin-left: 0px;
 }
 
 .auth-page {
@@ -62,7 +63,10 @@ $backgrd: url("../img//back_app.svg");
   background-size: cover;
 
   position: fixed;
+  top: 0;
+  right: 0;
   bottom: 0;
+  left: 0;
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -91,6 +95,7 @@ $backgrd: url("../img//back_app.svg");
 }
 
 .topnav {
+  height: 95px;
   margin-left: 4rem;
   p {
     color: white;
@@ -103,7 +108,7 @@ $backgrd: url("../img//back_app.svg");
       width: 171px;
       height: 35px;
     }
-    margin-left: 2.5rem;
+    margin-left: 5px;
     margin-right: 0.6rem;
     font-size: 1.6rem;
     padding-bottom: 0;
@@ -777,7 +782,7 @@ input {
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
   #logout {
-    margin-top: 185px;
+    margin-top: 195px;
   }
   @include desktop-xl {
     margin-left: 8%;
@@ -792,7 +797,7 @@ input {
     height: $nav-box;
     width: $nav-box;
     box-shadow: $shadow;
-    margin-bottom: 12px;
+    margin-bottom: 13px;
     border-radius: $regular-radius;
     transform: translateZ(0);
     transition: transform 0.25s ease-out;
@@ -1780,7 +1785,7 @@ input {
         p {
           font-size: 15px;
           font-weight: $medium;
-          color: #254ebe;
+          color: $huntease-main;
         }
       }
     }
