--- a/src/assets/styles/huntease.styles.white.scss
+++ b/src/assets/styles/huntease.styles.white.scss
@@ -7,7 +7,7 @@ $navbar-height-lg: 90px;
 
 // --------- Importing Rubik as main font
 @import url("https://fonts.googleapis.com/css?family=Rubik:200,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap");
-
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700&display=swap");
 // --------- Importing FontAwesome for Icons
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/font-awesome.min.css");
 
